# MothersLove

./: .gitignore  App.js  README.md  app.json  appcenter-post-clone.sh  motherslove.djinni  package.json  run_djinni.sh
android/: .project  build.gradle  settings.gradle
android/app/: BUCK  CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml  jniLibs
android/app/src/main/assets/: appcenter-config.json
android/app/src/main/java/com/motherslove/: DehazeModule.java  DehazePackage.java  HelloWorldModule.java  HelloWorldPackager.java  MainActivity.java  MainApplication.java
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
generated-src/cpp/: dehaze.hpp  hello_world.hpp
generated-src/java/com/motherslove/: Dehaze.java  HelloWorld.java
generated-src/jni/: NativeDehaze.cpp  NativeDehaze.hpp  NativeHelloWorld.cpp  NativeHelloWorld.hpp
generated-src/objc/: MTLDehaze+Private.h  MTLDehaze+Private.mm  MTLDehaze.h  MTLHelloWorld+Private.h  MTLHelloWorld+Private.mm  MTLHelloWorld.h
ios/: Podfile
ios/MothersLove/: AppCenter-Config.plist  AppDelegate.m  Info.plist
ios/MothersLove.xcodeproj/: project.pbxproj
ios/MothersLove.xcodeproj/xcshareddata/xcschemes/: MothersLove-tvOS.xcscheme  MothersLove.xcscheme
ios/MothersLove.xcworkspace/: contents.xcworkspacedata
ios/MothersLove/Base.lproj/: LaunchScreen.xib
ios/MothersLove/JSBridge/: Dehaze.m  HelloWorld.h  HelloWorld.m
ios/MothersLoveTests/: MothersLoveTests.m
src/cpp/: dehaze_impl.cpp  dehaze_impl.hpp  hello_world_impl.cpp  hello_world_impl.hpp
